
syntax = "proto3";
package users;

import "google/protobuf/timestamp.proto";
option go_package = "internal/grpc/users/proto";

message StatusResponse {
	bool status= 1;
}

message RefByIDRequest {
	string id= 1;
}

message User { 
	string handle= 1; 
	string id= 2; 
	string name= 3; 
	google.protobuf.Timestamp time_created= 4; 
	google.protobuf.Timestamp time_updated= 5; 
	Token token= 6;
} 
message GetUsersRequest {
	string before= 1;
	string after= 2;
	int64 first= 3;
	int64 last= 4;
	repeated string ids= 5;
	string search= 6;
	string handle= 7;
} 
message GetUsersResponse {
	bool has_next= 1;
	bool has_previous= 2;
	string first_cursor= 3;
	string last_cursor= 4;
	repeated User data=5;
}

message Badge { 
	string display_name= 1; 
	string id= 2; 
	google.protobuf.Timestamp time_created= 3; 
	google.protobuf.Timestamp time_updated= 4;
	string user_id= 5;
} 
message GetBadgesRequest {
	string before= 1;
	string after= 2;
	int64 first= 3;
	int64 last= 4;
	repeated string ids= 5;
	string user_id= 6;
} 
message GetBadgesResponse {
	bool has_next= 1;
	bool has_previous= 2;
	string first_cursor= 3;
	string last_cursor= 4;
	repeated Badge data=5;
}

message Token { 
	string access_token= 1; 
	google.protobuf.Timestamp expiry= 2; 
	string refresh_token= 3; 
	google.protobuf.Timestamp time_created= 4; 
	google.protobuf.Timestamp time_updated= 5; 
	string token_type= 6;
}

service UsersService {

	// users crud operations
	rpc CreateUser (User) returns (User) {}
	rpc GetUserByID (RefByIDRequest) returns (User) {}
	rpc GetUsers (GetUsersRequest) returns (GetUsersResponse){};
	rpc UpdateUser (User) returns (User) {}
	rpc DeleteUser (RefByIDRequest) returns  (StatusResponse){}

	// badges crud operations
	rpc CreateBadge (Badge) returns (Badge) {}
	rpc GetBadgeByID (RefByIDRequest) returns (Badge) {}
	rpc GetBadges (GetBadgesRequest) returns (GetBadgesResponse){};
	rpc UpdateBadge (Badge) returns (Badge) {}
	rpc DeleteBadge (RefByIDRequest) returns  (StatusResponse){}
}
